# learn-game-v1

./: README.md
docs/: architecture.md
include/: Game.h
resources/: CMakeLists.txt
src/: Game.cpp  main.cpp
src/components/button/: Button.cpp  Button.h
src/components/menu/: Menu.cpp  Menu.h
src/constant/: constants.h
src/core/engine/: Game.cpp  Game.h
src/core/logger/: Logger.cpp  Logger.h
src/core/scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/data/backup/: menu.json
src/data/domain/menu/: MenuData.h  MenuItem.h
src/data/repository/menu/: MenuRepository.cpp  MenuRepository.h
src/scenes/menu/: MenuScene.cpp  MenuScene.h
src/scenes2/menu/: Menu2Scene.cpp  Menu2Scene.h  MenuScene.cpp  MenuScene.h
src/utils/: TextUtils.cpp  TextUtils.h
